Extracted duplicated code in handlers which produce commands. Fixed a typo in the command which updates Stop cue targets.